# bachelors_project

./: .gitignore  CMakeLists.txt  README.md
include/: btree.h  io.h
src/: btree.cpp  io.cpp
tests/: btree_test.cpp
